[gd_scene load_steps=2 format=3 uid="uid://ctgsn3lsqhi7o"]

[ext_resource type="Script" uid="uid://d22xdokkviu08" path="res://test_menu.gd" id="1_66oii"]

[node name="TestMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_66oii")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -15.5
offset_right = 37.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "Cash"

[node name="x2Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
toggle_mode = true
text = "x2"

[node name="x5Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 609.0
offset_top = 197.0
offset_right = 640.0
offset_bottom = 228.0
text = "x5"

[node name="WorkerContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_bottom = 88.0
grow_horizontal = 0

[node name="WorkerButton" type="Button" parent="WorkerContainer"]
layout_mode = 2
text = "Worker"

[node name="WorkTimer" type="Timer" parent="WorkerContainer/WorkerButton"]

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
show_percentage = false

[node name="LabelPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.5
offset_right = 56.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="CashLabel" type="Label" parent="LabelPanelContainer"]
modulate = Color(0.84929, 0.783999, 1.54018e-06, 1)
layout_mode = 2
size_flags_horizontal = 0
text = "0"

[node name="CoalLabel" type="Label" parent="LabelPanelContainer"]
modulate = Color(1, 0.437771, 0.121414, 1)
layout_mode = 2
size_flags_horizontal = 4
text = "0"

[node name="IronOreLabel" type="Label" parent="LabelPanelContainer"]
modulate = Color(0.529067, 0.529067, 0.529067, 1)
layout_mode = 2
size_flags_horizontal = 8
text = "0"

[node name="BlueprintContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="IronBar" type="HSplitContainer" parent="BlueprintContainer"]
layout_mode = 2

[node name="BuildIronBar" type="Button" parent="BlueprintContainer/IronBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "Iron Bar"

[node name="IronBarQty" type="Label" parent="BlueprintContainer/IronBar"]
layout_mode = 2
text = "0"

[node name="IronDagger" type="HSplitContainer" parent="BlueprintContainer"]
layout_mode = 2

[node name="BuildIronDagger" type="Button" parent="BlueprintContainer/IronDagger"]
layout_mode = 2
size_flags_horizontal = 0
text = "Iron Dagger"

[node name="IronDaggerQty" type="Label" parent="BlueprintContainer/IronDagger"]
layout_mode = 2
text = "0"

[node name="BuyBar" type="Button" parent="BlueprintContainer"]
layout_mode = 2
text = "Buy Iron Bar"

[node name="Merchant" type="MenuButton" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Merchant"
item_count = 2
popup/item_0/text = "Buy Coal"
popup/item_0/id = 0
popup/item_1/text = "Buy Iron Bar"
popup/item_1/id = 1

[connection signal="cash_amount_changed" from="." to="." method="_on_cash_amount_changed"]
[connection signal="coal_amount_changed" from="." to="." method="_on_coal_amount_changed"]
[connection signal="iron_bar_amount_changed" from="." to="." method="_on_iron_bar_amount_changed"]
[connection signal="iron_dagger_amount_changed" from="." to="." method="_on_iron_dagger_amount_changed"]
[connection signal="iron_ore_amount_changed" from="." to="." method="_on_iron_ore_amount_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="x2Button" to="." method="_on_x_2_button_pressed"]
[connection signal="pressed" from="x5Button" to="." method="_on_x_5_button_pressed"]
[connection signal="pressed" from="WorkerContainer/WorkerButton" to="." method="_on_worker_button_pressed"]
[connection signal="timeout" from="WorkerContainer/WorkerButton/WorkTimer" to="." method="_on_work_timer_timeout"]
[connection signal="pressed" from="BlueprintContainer/IronBar/BuildIronBar" to="." method="_on_build_iron_bar_pressed"]
[connection signal="pressed" from="BlueprintContainer/BuyBar" to="." method="_on_buy_bar_pressed"]
[connection signal="about_to_popup" from="Merchant" to="." method="_on_merchant_about_to_popup"]
